openspeedtest/middleware-openspeedtest-buffer.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: openspeedtest-buffer
  namespace: openspeedtest
spec:
  buffering:
    maxRequestBodyBytes: 10000000000
